@@ -1,6 +1,10 @@
 package com.geekbrains.sep22.geekcloudclient;
 
-import com.geekbrains.model.FileRequest;
+import com.geekbrains.DaemonThreadFactory;
+import com.geekbrains.model.*;
+import io.netty.handler.codec.serialization.ObjectDecoderInputStream;
+import io.netty.handler.codec.serialization.ObjectEncoderOutputStream;
+import javafx.application.Platform;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
@@ -10,60 +14,75 @@ import javafx.scene.control.ListView;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
 
-import java.io.*;
+import java.io.File;
+import java.io.IOException;
 import java.net.Socket;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
-
-
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.ResourceBundle;
 
 public class CloudMainController implements Initializable {
     public ListView<String> clientView;
     public ListView<String> serverView;
     private String currentDirectory;
 
-    private DataInputStream dis;
-
-    private DataOutputStream dos;
+    private Network<ObjectDecoderInputStream, ObjectEncoderOutputStream> network;
 
     private Socket socket;
 
-    private static final String SEND_FILE_COMMAND = "file";
+    private boolean needReadMessages = true;
 
+    private DaemonThreadFactory factory;
 
-    public void sendToServer(ActionEvent actionEvent) {
+    public void downloadFile(ActionEvent actionEvent) throws IOException {
+        String fileName = serverView.getSelectionModel().getSelectedItem();
+        network.getOutputStream().writeObject(new FileRequest(fileName));
+    }
+
+    public void sendToServer(ActionEvent actionEvent) throws IOException {
         String fileName = clientView.getSelectionModel().getSelectedItem();
-        String filePath = currentDirectory + "/" + fileName;
-        File file = new File(filePath);
-        if (file.isFile()) {
-            try {
-                dos.writeUTF(SEND_FILE_COMMAND);
-                dos.writeUTF(fileName);
-                dos.writeLong(file.length());
-                try (FileInputStream fis = new FileInputStream(file)) {
-                    byte[] bytes = fis.readAllBytes();
-                    dos.write(bytes);
-                } catch (IOException e) {
-                    throw new RuntimeException(e);
+        network.getOutputStream().writeObject(new FileMessage(Path.of(currentDirectory).resolve(fileName)));
+    }
+
+    private void readMessages() {
+        try {
+            while (needReadMessages) {
+                CloudMessage message = (CloudMessage) network.getInputStream().readObject();
+                if (message instanceof FileMessage fileMessage) {
+                    Files.write(Path.of(currentDirectory).resolve(fileMessage.getFileName()), fileMessage.getBytes());
+                    Platform.runLater(() -> fillView(clientView, getFiles(currentDirectory)));
+                } else if (message instanceof ListMessage listMessage) {
+                    Platform.runLater(() -> fillView(serverView, listMessage.getFiles()));
                 }
-            } catch (Exception e) {
-                System.err.println("e = " + e.getMessage());
             }
+        } catch (Exception e) {
+            System.err.println("Server off");
+            e.printStackTrace();
         }
     }
 
     private void initNetwork() {
         try {
             socket = new Socket("localhost", 8189);
-            dis = new DataInputStream(socket.getInputStream());
-            dos = new DataOutputStream(socket.getOutputStream());
-        } catch (Exception ignored) {}
+            network = new Network<>(
+                    new ObjectDecoderInputStream(socket.getInputStream()),
+                    new ObjectEncoderOutputStream(socket.getOutputStream())
+            );
+            factory.getThread(this::readMessages, "cloud-client-read-thread")
+                    .start();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
+        needReadMessages = true;
+        factory = new DaemonThreadFactory();
         initNetwork();
         setCurrentDirectory(System.getProperty("user.home"));
         fillView(clientView, getFiles(currentDirectory));
@@ -73,6 +92,16 @@ public class CloudMainController implements Initializable {
                 File selectedFile = new File(currentDirectory + "/" + selected);
                 if (selectedFile.isDirectory()) {
                     setCurrentDirectory(currentDirectory + "/" + selected);
+                }
+            }
+        });
+        serverView.setOnMouseClicked(mouseEvent -> {
+            if (mouseEvent.getClickCount() == 2) {
+                String selected = serverView.getSelectionModel().getSelectedItem();
+                try {
+                    network.getOutputStream().writeObject(new DirFileListRequest(selected));
+                } catch (IOException e) {
+                    throw new RuntimeException(e);
                 }
             }
         });
@@ -108,6 +137,7 @@ public class CloudMainController implements Initializable {
                 Files.delete(Path.of(clientView.getSelectionModel().getSelectedItem()));
             } catch (IOException e) {
                 System.err.println("Error on delete file: " + e.getMessage());
+//                throw new RuntimeException(e);
             }
         }
         if (serverView.isMouseTransparent()){
@@ -122,11 +152,13 @@ public class CloudMainController implements Initializable {
                 Files.delete(Path.of(clientView.getSelectionModel().getSelectedItem()));
             } catch (IOException e) {
                 System.err.println("Error on delete file: " + e.getMessage());
+
             }
         }
         if (serverView.isMouseTransparent()){
 
         }
+
     }
 
     private void renameLocalForm(File file) throws IOException {
@@ -152,6 +184,4 @@ public class CloudMainController implements Initializable {
             }
         }
     }
-
-
 }
